docs update, bug fix, save hints in dialog
